--- a/helperapplication/build.gradle
+++ b/helperapplication/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.llouis3'
 
 android {
     compileSdkVersion 29
@@ -24,6 +27,8 @@ android {
 }
 
 dependencies {
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
